chore: edit engines, add env file

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ bun.lockb
 
 # Environment variables
 # Keep .env.example for reference
-.env
+# .env
 .env*.local
 .env.development.local
 .env.test.local
