feat: auth-next

--- a/.env
+++ b/.env
@@ -6,3 +6,11 @@ NEXT_PUBLIC_APP_VERSION="1.0.0"
 
 # 网站URL（生产环境使用实际域名）
 NEXT_PUBLIC_SITE_URL="http://localhost:3000"
+
+## auth-next github 配置
+# auth-next github clientId
+AUTH_GITHUB_ID=Ov23liy2jcus8Vumy6VO
+# auth-next github clientSecret
+AUTH_GITHUB_SECRET=22830de4e8da771e13c99a2b5433a2cff8ba1b0f
+# auth-next github secret
+AUTH_SECRET=594fc1d497270c41e9e501830ae20085
