--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@prisma/client": "^6.16.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -80,6 +81,7 @@
     "only-allow": "^1.2.1",
     "postcss": "^8.4.32",
     "prettier": "^3.6.2",
+    "prisma": "^6.16.1",
     "shadcn": "^3.2.1",
     "tailwindcss": "^3.4.15",
     "typescript": "^5"
