--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ NEXT_PUBLIC_APP_VERSION="1.0.0"
 # 网站URL（生产环境使用实际域名）
 NEXT_PUBLIC_SITE_URL="http://localhost:3000"
 
+NEXTAUTH_URL = "http://localhost:3000"
+
 ## auth-next github 配置
 # auth-next github clientId
 AUTH_GITHUB_ID=Ov23liy2jcus8Vumy6VO
