--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "pre-commit": "lint-staged",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "ganache": "npx ganache",
+    "truffle:migrate": "npx truffle migrate"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -53,10 +55,12 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "ganache": "^7.9.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "openzeppelin-solidity": "^3.4.2",
     "react": "19.1.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
@@ -64,6 +68,7 @@
     "react-resizable-panels": "^3.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "truffle": "^5.11.5",
     "vaul": "^1.1.2",
     "zod": "^4.1.5"
   },
