chore: update web3 configuration and smart contracts
- Updated WEB3.md documentation
- Modified exchange.sol smart contract
- Updated package.json dependencies
- Updated truffle-config.js configuration
- Added compiled contract artifacts to src/contracts/

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "format:check": "prettier --check .",
     "pre-commit": "lint-staged",
     "type-check": "tsc --noEmit",
-    "ganache": "npx ganache",
+    "ganache": "npx ganache -d",
     "truffle:dev": "npx truffle migrate --reset --compile-all --network development"
   },
   "dependencies": {
