chore: fix ESLint ignores and switch commitlint config to ESM

--- a/.env
+++ b/.env
@@ -30,3 +30,9 @@ AUTH_SECRET=594fc1d497270c41e9e501830ae20085
 
 # 数据库连接
 DATABASE_URL="postgresql://postgres:postgres123@localhost:5432/myapp?schema=blog"
+
+
+# hardhat 配置
+# localhost
+
+LOCALHOST_RPC_URL = "http://127.0.0.1:9999"
