feat: 添加登录页面加载状态组件和骨架屏UI
- 新增登录页面loading组件，包含动画效果和进度条
- 新增Skeleton骨架屏UI组件
- 更新全局样式，添加登录加载页面专用动画
- 更新.prettierignore配置，忽略更多构建文件

--- a/.prettierignore
+++ b/.prettierignore
@@ -9,3 +9,23 @@ build
 .env.test.local
 .env.production.local
 .env.*
+.history
+.turbo
+.vercel
+.next
+.next/
+.next/static/
+.next/static/chunks/
+.next/static/chunks/pages/
+.next/static/chunks/app/
+.next/static/chunks/app/page/
+pnpm-lock.yaml
+package-lock.json
+yarn.lock
+bun.lockb
+.eslintcache
+.prettiercache
+.vscode
+.idea
+.DS_Store
+.gitignore
