test(solidity): add Transfer event tests and fuzz tests for RichardToken
- Add event assertions for transfer and transferFrom
- Add constructor initial Transfer event test
- Add revert tests for zero address, zero amount, insufficient balance
- Add fuzz tests for balances invariants and allowance reductions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,5 +34,8 @@
   },
   "[markdown]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[solidity]": {
+    "editor.defaultFormatter": "NomicFoundation.hardhat-solidity"
   }
 }
