--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "type-check": "tsc --noEmit",
     "ht-local:hnp": "npx hardhat node --port 9999",
     "ht-test:sol": "npx hardhat test solidity",
-    "ht-complie": "npx hardhat complie",
-    "ht-deploy": "npx hardhat deploy"
+    "ht-compile": "npx hardhat compile",
+    "ht-deploy": "npx hardhat ignition deploy ./ignition/modules/deploy.ts --network localhost",
+    "ht-dev:up": "pnpm ht-local:hnp & sleep 2 && pnpm ht-deploy",
+    "ht-dev:down": "pkill -f 'hardhat node' && pkill -f 'hardhat ignition'"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -82,6 +84,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^17.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "forge-std": "github:foundry-rs/forge-std#v1.9.4",
