--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,12 @@
       "@/dashboard/*": ["./src/app/(dashboard)/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "tasks/test-simple.js"
+  ],
   "exclude": ["node_modules"]
 }
