fix: 鍦?TypeScript 閰嶇疆涓帓闄?tasks 鐩綍

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,12 +28,6 @@
       "@/dashboard/*": ["./src/app/(dashboard)/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    "tasks/test-simple.js"
-  ],
-  "exclude": ["node_modules"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules", "tasks/**"]
 }
