--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,13 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "scripts", "tasks/**"]
+  "exclude": [
+    "node_modules",
+    "scripts",
+    "tasks/**",
+    "prisma/**",
+    "contracts/**",
+    "ignition/**",
+    "test/**"
+  ]
 }
