--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,13 +29,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": [
-    "node_modules",
-    "scripts",
-    "tasks/**",
-    "prisma/**",
-    "contracts/**",
-    "ignition/**",
-    "test/**"
-  ]
+  "exclude": ["node_modules", "scripts", "tasks/**", "prisma/**", "contracts/**", "ignition/**", "test/**"]
 }
