--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,14 @@
   "editor.formatOnType": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit"
+    "source.fixAll.eslint": true
   },
+  "prettier.printWidth": 110,
+  "prettier.singleQuote": true,
+  "prettier.trailingComma": "all",
+  "prettier.semi": true,
+  "prettier.tabWidth": 2,
+  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact", "json"],
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
