--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
+    "format:staged": "lint-staged",
     "pre-commit": "lint-staged",
     "type-check": "tsc --noEmit",
     "ht-local:hnp": "npx hardhat node --port 9999",
@@ -59,6 +60,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "ethers": "^6.15.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
@@ -87,6 +89,8 @@
     "dotenv": "^17.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "forge-std": "github:foundry-rs/forge-std#v1.9.4",
     "hardhat": "3.0.6",
     "husky": "^9.1.7",
